#SET(LIBHELLO_SRC hello.c)
ADD_LIBRARY(hello SHARED hello.cpp)
# ADD_LIBRARY(hello_static STATIC ${LIBHELLO_SRC})
ADD_LIBRARY(hello_static STATIC hello.cpp)

SET_TARGET_PROPERTIES(hello_static PROPERTIES OUTPUT_NAME "hello")
SET_TARGET_PROPERTIES(hello PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(hello_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)

INSTALL(TARGETS hello hello_static 
LIBRARY DESTINATION lib 
ARCHIVE DESTINATION lib)
INSTALL(FILES hello.h DESTINATION include/hello)

